--- a/index.html
+++ b/index.html
@@ -18,7 +18,21 @@
                     <div class="contenido">
                         <strong>Querida Mamá</strong>
                         <p>
-                            Hoje é <strong>Tu dia mamá</strong>, que nos enseñó con<em> amor</em>, la <em>paciencia</em> y sacrificio (como en las peliculas). Gracias, mamá, por ser refugio en los días difíciles, por cada sonrisa que nos regalaste aún en medio del cansancio y por tu fuerza que siempre nos inspira."<strong>te amo</strong>" en <strong>LED gigante</strong> Tu amor es el motor silencioso que impulsa nuestras vidas. Nada en este mundo se compara con tu entrega y tu corazón. Hoy y siempre, te honramos y te agradecemos por todo lo que eres. Gracias por hacer de mi vida una versión mejorada, sin errores (bueno, quizá con algunos, pero todos adorables). <br> <strong>Feliz Dia Mamá</strong>, mi <em>lugar seguro</em>. <br> Con mucho <strong>código</strong> (y <strong>amor</strong>), <br> Tu hijo  programador. <br> <span style="font-size: 0.9em; color: grey;">PD: Si esta carta fuera un programa, su salida sería:</span> <br> <code>"Gracias por darme la vida mamá, Te amo mucho mamá ❤️."</code>
+                          <strong>Dona Encreca</strong>, <br>
+Hoje é o seu dia, mas para mim, todos os dias são seus.<br>
+Porque não existe um momento sequer da minha vida em que eu não me lembre do que você fez — e ainda faz — por mim. <br>
+
+Você foi colo nos dias difíceis, força quando eu pensei em desistir, sorriso quando o mundo parecia cinza. <br>
+Você é oração que me protege, abraço que me cura, amor que não cobra, não mede, não falha. <br>
+Você é presença, mesmo quando está em silêncio. <br>
+É farol, mesmo nos meus caminhos escuros. <br>
+
+Eu não seria quem sou se não fosse por você. <br>
+E mesmo que eu tente, nunca conseguirei retribuir tudo o que você fez por mim. <br>
+Mas eu prometo te honrar, cuidar de você, te fazer sentir amada — porque você merece o mundo, e ainda assim seria pouco. <br>
+
+<strong>Te amo além das palavras</strong>. Obrigado por ser minha mãe. <br>
+Feliz Dia das Mães! 🌷❤️
                         </p>
                     </div>
                 </div>
