--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="sobre">
                 <div class="carta">
                     <div class="contenido">
-                        <strong>Querida Mamá</strong>
+                        <strong>Querida Mamãe</strong>
                         <p>
                           <strong>Dona Encreca</strong>, <br>
 Hoje é o seu dia, mas para mim, todos os dias são seus.<br>
